--- a/StudioFactoryTest/Base.lproj/Main_iPhone.storyboard
+++ b/StudioFactoryTest/Base.lproj/Main_iPhone.storyboard
@@ -40,7 +40,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="C6Z-h2-xsA">
-                        <barButtonItem key="rightBarButtonItem" style="plain" id="IHS-NV-ABW">
+                        <barButtonItem key="rightBarButtonItem" id="IHS-NV-ABW">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="6cy-XH-1nE">
                                 <rect key="frame" x="233" y="5" width="71" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -88,7 +88,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o0h-NZ-UCZ">
-                                <rect key="frame" x="52" y="344" width="181" height="30"/>
+                                <rect key="frame" x="70" y="345" width="181" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Choose Your Profile Photo">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -112,6 +112,10 @@
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5rU-bL-o4l">
+                                <rect key="frame" x="64" y="394" width="193" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -119,6 +123,7 @@
                     <connections>
                         <outlet property="addAccountTextField" destination="3wS-rs-hz5" id="L0j-Lg-6Xa"/>
                         <outlet property="addDiscriptionTextView" destination="qae-Kq-URi" id="uaH-4f-8Mg"/>
+                        <outlet property="chosenPhotoImageView" destination="5rU-bL-o4l" id="FNG-zb-XQf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="so9-Aa-YrJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
